syntax = "proto3";

package auth;

option go_package = "github.com/kiribu/jwt-practice/internal/auth/grpc/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc GetProfile(GetProfileRequest) returns (UserResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string id = 1;  // UUID as string
  string username = 2;
  string created_at = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string username = 2;
  string user_id = 3;  // UUID as string
  string error = 4;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message GetProfileRequest {
  string username = 1;
}

message UserResponse {
  string id = 1;         // UUID as string
  string username = 2;
  string created_at = 3; // ISO string
}
